[package]
name = "voteme-reward"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
voteme-api = { path = "../voteme-api" }

pumpkin = { workspace = true }
pumpkin-util = { workspace = true }
pumpkin-api-macros = { workspace = true }

log = { workspace = true }
tokio = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
aes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
rusqlite = { workspace = true }
